[gd_scene load_steps=3 format=1]

[ext_resource path="res://src/disease/disease.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/disease/cold.gd" type="Script" id=2]

[node name="Cold" instance=ExtResource( 1 )]

script/script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="SneezeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="SneezeTimer" to="." method="_on_SneezeTimer_timeout"]


